--- a/pg1.html
+++ b/pg1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>This is 7am</title>
+		<title>Generic - Solid State by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,8 +18,8 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">This is 7am</a></h1>
+					<header id="header">
+						<h1><a href="index.html">Solid State</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -33,104 +33,58 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li>
-								<li><a href="pg1.html">Log In</a></li>
-								<li><a href="pg1.html">Sign Up</a></li>
+								<li><a href="#">Log In</a></li>
+								<li><a href="#">Sign Up</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
 					</nav>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>This is 7am!</h2>
-							<p>Tu nuevo sitio favorito</p>
-						</div>
-					</section>
-
 				<!-- Wrapper -->
 					<section id="wrapper">
+						<header>
+							<div class="inner">
+								<h2>Generic</h2>
+								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+							</div>
+						</header>
 
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
+						<!-- Content -->
+							<div class="wrapper">
 								<div class="inner">
-									<a href="pg1.html" class="image"><img src="images/cabaña.jpeg" alt="cabaña magica" /></a>
-									<div class="content">
-										<h2 class="major">Base de datos</h2>
-										<p>La necesidad de transporte y de mejorar los tiempos de traslado entre viajes, el crecimiento del congestionamiento vial y los incrementos al precio de la gasolina, son solo algunos de los factores que inciden en el constante incremento en el uso de las motocicletas dentro de la Ciudad de México.</p>
-										<a href="Base de datos.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
 
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/flores.jpeg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tarea 1</h2>
-										<p>Cómo hacer tu propia página web 101</p>
-										<a href="tarea1.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
+									<h3 class="major">Lorem ipsum dolor</h3>
+									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
 
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/bosque.jpeg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Timeline</h2>
-										<p>A diciembre del 2018 la inflación en México se colocó en 4.83%, con este nivel se ligaron dos años consecutivos por encima del objetivo inflacionario establecido por el Banco de México</p>
-										<a href="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1A19hhydZ3_9iZ3fAc90e-bUFbLGvcNY2KJaUVyaZmJU&font=Default&lang=en&initial_zoom=2&height=650" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
+									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
 
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Artículos</h2>
+									<h3 class="major">Vitae phasellus</h3>
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/libros.jpeg" alt="" /></a>
-											<h3 class="major">Artículo 1</h3>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<h3 class="major">Sed feugiat lorem</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/rana.jpeg" alt="" /></a>
-											<h3 class="major">Artículo 2</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/mar.jpeg" alt="" /></a>
-											<h3 class="major">Artículo 3</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/manos.jpeg" alt="" /></a>
-											<h3 class="major">Artículo 4</h3>
+											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<h3 class="major">Nisl placerat</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+
 								</div>
-							</section>
+							</div>
 
 					</section>
 
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Contáctanos</h2>
+							<h2 class="major">Get in touch</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 							<form method="post" action="#">
 								<div class="fields">
