--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="pg1.html" class="image"><img src="images/cabaña.jpeg" alt="cabaña magica" /></a>
+									<a href="pg1.html" class="image"><img src="images/basededatos.jpeg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Base de datos</h2>
 										<p>La necesidad de transporte y de mejorar los tiempos de traslado entre viajes, el crecimiento del congestionamiento vial y los incrementos al precio de la gasolina, son solo algunos de los factores que inciden en el constante incremento en el uso de las motocicletas dentro de la Ciudad de México.</p>
@@ -67,7 +67,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/flores.jpeg" alt="" /></a>
+									<a href="#" class="image"><img src="images/paginaweb.jpeg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Tarea 1</h2>
 										<p>Cómo hacer tu propia página web 101</p>
@@ -79,7 +79,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/bosque.jpeg" alt="" /></a>
+									<a href="#" class="image"><img src="images/timeline.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Timeline</h2>
 										<p>A diciembre del 2018 la inflación en México se colocó en 4.83%, con este nivel se ligaron dos años consecutivos por encima del objetivo inflacionario establecido por el Banco de México</p>
