--- a/index.html
+++ b/index.html
@@ -97,14 +97,15 @@
 										<article>
 											<a href="#" class="image"><img src="images/libros.jpeg" alt="" /></a>
 											<h3 class="major">Artículo 1</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>Artículo ganador del premio Gabo: El problema sigue creciendo: hipopótamos a la venta en Colombia.
+											</p>
+											<a href="Premio Gabo.html" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/rana.jpeg" alt="" /></a>
 											<h3 class="major">Artículo 2</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>Aborto en menores de edad</p>
+											<a href="Estadística de abortos.html" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/mar.jpeg" alt="" /></a>
