--- a/Estadística de abortos.html
+++ b/Estadística de abortos.html
@@ -44,8 +44,8 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Generic</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<h2>Aborto en menores de edad: estadísticas</h2>
+								<p>Andrea Martínez Casasola</p>
 							</div>
 						</header>
 
