--- a/Premio Gabo.html
+++ b/Premio Gabo.html
@@ -44,8 +44,8 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Generic</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<h2>El problema sigue creciendo: hipopótamos a la venta en Colombia</h2>
+								<p>Ganador del premio Gabo 2021</p>
 							</div>
 						</header>
 
@@ -53,7 +53,7 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<h3 class="major">Lorem ipsum dolor</h3>
+									<h3 class="major">El problema sigue creciendo: hipopótamos a la venta en Colombia.</h3>
 									<p>El texto “El problema sigue creciendo: hipopótamos a la venta en Colombia”, escrito por la periodista Diana  María Pachón y publicado en Mongabay Latam en noviembre de 2021, narra su investigación acerca del tráfico ilegal de hipopótamos que ha ido incrementando en Colombia hasta convertirse en un problema que puede ocasionar la muerte de quienes habitan cerca de lagos, el Río Magdalena o de quienes pescan por sus orillas.
 
 										Diana comienza contando dos historias igual de terribles: hombres que tuvieron la mala suerte de acercarse demasiado a este animal sin ser consciente de ello y sufrir las consecuencias de una mordida que puede pesar casi 130 kilogramos por centímetro cuadrado. Comenzar con las historias le da al lector una perspectiva real de la gravedad del problema y de la agresión de la que son capaces estos animales que, a primera vista, pueden parecer tiernos.
