--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/mar.jpeg" alt="" /></a>
 											<h3 class="major">Artículo 3</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>Martín Rodríguez: Como armas un rompecabezas</p>
+											<a href="Entrevista.html" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/manos.jpeg" alt="" /></a>
