--- a/pg1.html
+++ b/pg1.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">This is 7am !</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -84,38 +84,21 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
+							<h2 class="major">Cómo contactarnos</h2>
+							<p>¡Contacta al creador de This is 7am !</p>
+							
 							</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									Ubicación: Universidad Iberoamericana<br />
+									Prol. Paseo de la Reforma, Lomas de Santa Fe, México<br />
+									C.P. 01219,Ciudad de México.
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-phone">55 4338 4542</li>
+								<li class="icon solid fa-envelope"><a href="mailto:andymc2000@hotmail.com">andymc2000@hotmail.com</a></li>
+								<li class="icon brands fa-twitter"><a href="https://twitter.com/andreamcss">@andreamcss</a></li>
+								<li class="icon brands fa-facebook-f"><a href="https://m.facebook.com/andrea.martinezcasasola?eav=Afb-FV3k04zOL58tEMg6pHtOFF77PKkuYLRfTfkBZJ-eKRad91IxodzMDy2Qw9pu0vg&paipv=0">Andrea M Casasola</a></li>
+								<li class="icon brands fa-instagram"><a href="https://www.instagram.com/andrea_mcasasola/">@andrea_mcasasola</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
